--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <meta name="description" content="">
       <meta name="author" content="">
       <!-- site icons -->
-      <link rel="icon" href="img/fevicon.png" type="image/png" />
+      <link rel="icon" href="img/favicon.ico" />
       <!-- bootstrap css -->
       <link rel="stylesheet" href="css/bootstrap.min.css" />
       <!-- site css -->
@@ -81,28 +81,18 @@
                      <div class="carousel-item active">
                         <div class="full">
                            <div class="left_blog_top pl-xl-5 pl-0">
-                              <h3>Decorate<br>Service</h3>
-                              <a href="https://www.instagram.com/homis_makeover/" target="_blank"><p>@homis_makeover</p></a>
+                              <h3 class="px-3 px-xl-0">Property<br>Makeover &<br>Styling<br>Service</h3>
+                              <p class="slogan px-3 px-xl-0" style="font-style: italic; color: #C8B6A6; font-size: 1.2em; margin-bottom: 20px; letter-spacing: 1px; font-weight: 500;">Where Affordability Meets Aesthetics</p>
+                              <div class="social-links px-3 px-xl-0">
+                                 <a href="https://www.instagram.com/homis_makeover/" target="_blank"><p><i class="fa fa-instagram mr-2"></i>homis_makeover</p></a>
+                                 <a href="https://www.facebook.com/p/HOMIS-Makover-100057350173827/" target="_blank"><p style="margin-bottom: 30px;"><i class="fa fa-facebook mr-2"></i> HOMIS Makeover</p></a>
+                              </div>
                               <div class="d-flex justify-content-xl-start justify-content-center">
                                  <a class="bt_main d-block" href="contact.html">Contact Us</a>
                               </div>
                            </div>
                            <div class="right_blog_top d-xl-block d-none">
                               <img src="images/slider_img2.jpg" alt="#" height="572px" width="381px"/>
-                           </div>
-                        </div>
-                     </div>
-                     <div class="carousel-item">
-                        <div class="full">
-                           <div class="left_blog_top pl-xl-5 pl-0">
-                              <h3>Makeover<br>Service</h3>
-                              <a href="https://www.instagram.com/homis_makeover/" target="_blank"><p>@homis_makeover</p></a>
-                              <div class="d-flex justify-content-xl-start justify-content-center">
-                                 <a class="bt_main d-block" href="contact.html">Contact Us</a>
-                              </div>
-                           </div>
-                           <div class="right_blog_top d-xl-block d-none">
-                              <img src="images/slider_img3.jpg" alt="#" height="572px" width="381px"/>
                            </div>
                         </div>
                      </div>
@@ -128,8 +118,8 @@
                         <div class="full heading_s1">
                            <h3>About Us</h3>
                            <ul>
-                              <li><p>Specialize in providing affordable property makeover solutions for both residential and commercial properties.</p></li>
-                              <li><p>As property investors ourselves, we truly understand what an investor needs: To stand out from competitors, generate higher rental yield, with minimal spending.</p></li>
+                              <li><p>We specialize in delivering cost-effective property makeover and renovation solutions for both residential and commercial properties.</p></li>
+                              <li><p>As property investors ourselves, we understand the importance of maximizing returns. Our goal is to help you enhance property value, attract tenants or buyers, and achieve higher rental yields—all while keeping costs efficient and strategic. With our expertise, we transform spaces to stand out in a competitive market.</p></li>
                            </ul>
                         </div>
                         <div class="full">
@@ -786,11 +776,12 @@
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li> -->
                         <li><a href="https://www.instagram.com/homis_makeover/" target="_blank"><i class="fa fa-instagram"></i> homis_makeover</a></li>
+                        <li><a href="https://www.facebook.com/p/HOMIS-Makover-100057350173827/" target="_blank"><i class="fa fa-facebook"></i> HOMIS Makeover</a></li>
                         <!-- <li><a href="#"><i class="fa fa-youtube-play"></i></a></li> -->
                      </ul>
                   </div>
                   <div class="full text_align_center">
-                     <p>© 2023 All Rights Reserved. Homis Makeover</p>
+                     <p>© 2025 All Rights Reserved. Homis Makeover</p>
                   </div>
                </div>
             </div>
