--- a/packages.html
+++ b/packages.html
@@ -13,7 +13,7 @@
       <meta name="description" content="">
       <meta name="author" content="">
       <!-- site icons -->
-      <link rel="icon" href="img/fevicon.png" type="image/png" />
+      <link rel="icon" href="img/favicon.ico" />
       <!-- bootstrap css -->
       <link rel="stylesheet" href="css/bootstrap.min.css" />
       <!-- site css -->
@@ -234,11 +234,12 @@
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li> -->
                         <li><a href="https://www.instagram.com/homis_makeover/" target="_blank"><i class="fa fa-instagram"></i> homis_makeover</a></li>
+                        <li><a href="https://www.facebook.com/p/HOMIS-Makover-100057350173827/" target="_blank"><i class="fa fa-facebook"></i> HOMIS Makeover</a></li>
                         <!-- <li><a href="#"><i class="fa fa-youtube-play"></i></a></li> -->
                      </ul>
                   </div>
                   <div class="full text_align_center">
-                     <p>© 2023 All Rights Reserved. Homis Makeover</p>
+                     <p>© 2025 All Rights Reserved. Homis Makeover</p>
                   </div>
                </div>
             </div>
