--- a/index.html
+++ b/index.html
@@ -789,8 +789,12 @@
       </div>
       <!-- end cpy -->
 
-      <a  class="whats-app" href="https://wa.link/qepe3h" target="_blank">
+      <a class="whats-app" href="https://wa.link/qepe3h" target="_blank">
          <i class="fa fa-whatsapp my-float"></i>
+     </a>
+
+     <a class="download-pdf" href="pdf/HOMIS portfolio 2025.pdf" download>
+         <i class="fa fa-file-pdf-o my-float"></i>
      </a>
 
       <!-- jQuery (necessary for Bootstrap's JavaScript) -->
