--- a/packages.html
+++ b/packages.html
@@ -86,53 +86,69 @@
       <!-- 'Packages' section -->
       <section class="layout_padding" id="packages">
          <div class="container wow fadeInDown">
-            <!-- <div class="row">
+            <div class="row">
                <div class="col-md-12">
                   <div class="full heading_s1">
                      <h3>Packages</h3>
                   </div>
                </div>
-            </div> -->
+            </div>
             <div class="row">
-               <div class="col-xl-6 col-12">
+               <div class="col-xl-4 col-12 mb-4">
                   <div class="blog_style">
                      <div class="full news_blog mb-3">
-                        <img class="w-100" src="images/package_img1.png" alt="#" />
+                        <img class="w-100" src="images/package-1.jpeg" alt="Studio Essentials" />
                      </div>
                      <div class="full mb-2">
-                        <h3>Package 1 - Living + Dining Hall</h3>
-                        <span class="h4 font-weight-bold" style="color: #776B5D;">RM 10,900</span>
+                        <h3>Studio Essentials</h3>
+                        <p class="text-muted mb-2"><em>For studio units</em></p>
+                        <span class="h4 font-weight-bold" style="color: #776B5D;">RM 14,800</span>
                         <br>
                         <br>
                         <ul class="ml-4" style="list-style: circle;">
-                           <li><p>For owner with lower budget.</p></li>
-                           <li><p>Very appealing for marketing.</p></li>
-                           <li><p>Leave the rooms empty for tenant to enjoy flexibility of decoration.</p></li>
+                           <li><p>Smart, space-saving design to enhance aesthetics without clutter</p></li>
+                           <li><p>Essential, stylish furniture for a modern and functional look</p></li>
+                           <li><p>Budget-friendly transformation for maximum impact</p></li>
                         </ul>
                      </div>
-                     <!-- <div class="full d-flex justify-content-center">
-                        <a class="read_more_bt" href="about.html">Read More</a>
-                     </div> -->
                   </div>
                </div>
-               <div class="col-xl-6 col-12">
+               <div class="col-xl-4 col-12 mb-4">
                   <div class="blog_style">
                      <div class="full news_blog mb-3">
-                        <img class="w-100" src="images/package_img2.png" alt="#" />
+                        <img class="w-100" src="images/package-2.jpeg" alt="Smart Space Package" />
                      </div>
-                     <div class="full pb-2">
-                        <h3>Package 2 - Living + Dining Hall + Masterroom</h3>
-                        <span class="h4 font-weight-bold" style="color: #776B5D;">RM 16,800</span>
+                     <div class="full mb-2">
+                        <h3>Smart Space Package</h3>
+                        <p class="text-muted mb-2"><em>For 600-900 sq. ft. homes</em></p>
+                        <span class="h4 font-weight-bold" style="color: #776B5D;">RM 17,800</span>
                         <br>
                         <br>
                         <ul class="ml-4" style="list-style: circle;">
-                           <li><p>For owner with medium budget.</p></li>
-                           <li><p>Leave 1 medium room empty for tenants to design according to their needs.</p></li>
+                           <li><p>Thoughtfully selected furniture to elevate the Living Room, Dining Area, and Master Bedroom</p></li>
+                           <li><p>One small room left empty for tenants to customize, keeping costs efficient</p></li>
+                           <li><p>Balanced makeover that enhances appearance while staying cost-effective</p></li>
                         </ul>
                      </div>
-                     <!-- <div class="full d-flex justify-content-center">
-                        <a class="read_more_bt" href="about.html">Read More</a>
-                     </div> -->
+                  </div>
+               </div>
+               <div class="col-xl-4 col-12 mb-4">
+                  <div class="blog_style">
+                     <div class="full news_blog mb-3">
+                        <img class="w-100" src="images/package-3.jpeg" alt="Grand Living Package" />
+                     </div>
+                     <div class="full mb-2">
+                        <h3>Grand Living Package</h3>
+                        <p class="text-muted mb-2"><em>For 1,000+ sq. ft. homes</em></p>
+                        <span class="h4 font-weight-bold" style="color: #776B5D;">RM 19,800</span>
+                        <br>
+                        <br>
+                        <ul class="ml-4" style="list-style: circle;">
+                           <li><p>Complete transformation of Living Room, Dining Area, and Master Bedroom</p></li>
+                           <li><p>Optimized design to make larger spaces feel stylish, cohesive, and inviting</p></li>
+                           <li><p>Maximized aesthetics with minimal cost, ensuring a premium look without overspending</p></li>
+                        </ul>
+                     </div>
                   </div>
                </div>
             </div>
